package hellgren.SOLID.dependency_inversion;

public interface Developer {

    void develop();
}
